--- a/Telecom Project/requirements.txt
+++ b/Telecom Project/requirements.txt
@@ -3,5 +3,7 @@ werkzeug>=2.0.0
 requests==2.25.1
 pickle-mixin==1.0.2
 gunicorn==20.1.0
-scikit-learn==0.24.2 
+Cython==0.29.33
+numpy==1.23.5
+scikit-learn==0.24.2
 
